# Shotcut-Pro

./: .gitignore  CMakeLists.txt  CRITICAL_ANALYSIS_REPORT.md  DEVELOPMENT_PLAN.md  FEATURES_AND_EFFECTS_PLAN.md  ISSUES_CHECKLIST.md  LICENSE  MASTER_IMPLEMENTATION_PLAN.md  PLANNING_SUMMARY.md  README.md  ROADMAP.md  SETUP_GUIDE.md  SHOTCUT_ANALYSIS.md  UI_UX_RESEARCH.md  build_and_run.bat  compile_and_run_ui.bat  compile_ui_demo.bat  compile_vs.bat  package-lock.json  package.json  run_ui_demo.ps1  simple_ui_demo.cpp  simple_ui_showcase.cpp  ui_framework_showcase.ps1
.clinerules/: Memory Bank.md
cmake/: CompilerHardening.cmake  SecurityFlags.cmake
docs/: CODEBASE_ANALYSIS.md  GRAPHICS_IMPLEMENTATION_STATUS.md  Project_Status_Report.md  Senior_Cpp_Developer_Complete_Research_Document.md  todo_list.md
docs/guides/: Phase10_SecurityFileFormat_Guide.md  Phase2_TechnicalAnalysis_ShockcutTransformation.md  Phase3_ArchitectureDesign_ShockcutTransformation.md  Phase3_Critical_Concerns_Action_Plan.md  Phase3_Evaluation_Report.md  Phase4_Evaluation_Report.md  Phase4_FoundationImplementation_Guide.md  Phase5_Comprehensive_Evaluation_Report.md  Phase5_Critical_Issues_Action_Plan.md  Phase5_EffectsAndAudio_Completion_Report.md  Phase5_UIFrameworkDevelopment_Guide.md  Phase5_UIFrameworkDevelopment_Plan.md  Phase6_Final_Project_Completion_Report.md  Phase6_VideoProcessingPipeline_Guide.md  Phase7_TimelineEditing_Guide.md  Phase8_EffectsProcessing_Guide.md  Phase9_ExportProduction_Guide.md
docs/research/: ResearchDocument_ForShotCut.txt  Research_Summary_ShotcutTransformation.md
include/audio/: audio_processor.h
include/effects/: builtin_effects.h  effect_system.h
include/platform/: platform.h
include/rendering/: vulkan_context.h
include/timeline/: components.h  entity.h  systems.h
include/utils/: utils.h
include/video/: export_system.h  ffmpeg_wrapper.h  frame_buffer.h  nvidia_video_sdk.h  secure_file_format.h  video.h  video_preview.h
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: CMakeLists.txt  main.cpp  simple_working_demo.cpp  ui_complete_demo.cpp  ui_demo.cpp
src/audio/: CMakeLists.txt  audio.cpp  audio_processor.cpp
src/core/: CMakeLists.txt  application.cpp  application.h
src/effects/: CMakeLists.txt  effect_system.cpp  effects_demo.cpp
src/platform/: CMakeLists.txt  platform.cpp
src/rendering/: CMakeLists.txt  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_context.cpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.h  vulkan_swapchain.cpp  vulkan_swapchain.h
src/timeline/: CMakeLists.txt  entity.cpp  timeline_demo.cpp
src/ui/: CMakeLists.txt  input_manager.cpp  input_manager.h  layout_engine.cpp  layout_engine.h  math_types.h  theme_system.cpp  theme_system.h  timeline_widget.cpp  timeline_widget.h  ui_renderer.cpp  ui_renderer.h  vulkan_ui_renderer.cpp  vulkan_ui_renderer.h  widget_system.cpp  widget_system.h
src/utils/: CMakeLists.txt  utils.cpp
src/video/: CMakeLists.txt  export_demo.cpp  export_system.cpp  ffmpeg_wrapper.cpp  frame_buffer.cpp  nvidia_video_sdk.cpp  video.cpp  video_demo.cpp
tests/: CMakeLists.txt
